# ex_turso

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  mix.exs  review.md
.github/workflows/: ci.yml  e2e.yml  release.yml  test.yml
docs/superpowers/plans/: 2026-06-03-turso-advanced-features.md
e2e/: README.md  mix.exs
e2e/scripts/: lib.sh  run-cloud-sync.sh  run-local.sh  run-release.sh
e2e/test/: cloud_sync_e2e_test.exs  local_file_e2e_test.exs  sql_types_e2e_test.exs  test_helper.exs  transaction_pool_e2e_test.exs  vector_e2e_test.exs
lib/: ex_turso.ex
lib/ecto/adapters/: turso.ex
lib/ecto/adapters/turso/: codec.ex  connection.ex  data_type.ex
lib/ex_turso/: connection.ex  error.ex  native.ex  query.ex  result.ex
native/ex_turso/: Cargo.toml
native/ex_turso/src/: lib.rs
test/: ecto_turso_test.exs  ex_turso_test.exs
