[package]
name = "ex_turso"
version = "0.2.0"
authors = []
edition = "2021"

[lib]
name = "ex_turso"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
turso = { version = "0.5", features = ["sync"] }
# The public turso crate does not expose this feature directly yet.
turso_core = { version = "0.5", features = ["fts"] }
rustler = "0.38"
tokio = { version = "1", features = ["full"] }
once_cell = "1"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
